--- a/src/components/UV/UV.module.css
+++ b/src/components/UV/UV.module.css
@@ -1,7 +1,6 @@
 .TextInput {
     font-size: large;
-    border: 1px solid #EEEEEE;
-    padding: 5px;
+    padding: 10px;
     border-radius: 3px;
     display: block;
     margin: 5px auto;
@@ -9,18 +8,24 @@
 
 .TextInput:focus {
     outline: none;
-    border-color: #719ECE;
-    box-shadow: 0 0 10px rgb(50, 100, 153);
+    border-color: #BD9242;
 }
 
 .Button {
     display: block;
-    margin: 10px auto;
     padding: .5rem;
     font-size: 1em;
-    background: darkcyan;
-    border-radius: 5px;
+    background: #BD9242;
+    border-radius: 10px;
     color: white;
     cursor: pointer;
-    margin: 5px auto;
+    margin: 20px auto;
+}
+
+h2 {
+    color: #BD9242;
+}
+
+.Button:hover {
+    background: #cca55c;
 }
