--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,11 @@
 main {
   flex-grow: 1;
   text-align: center;
-  padding: 5px;
+  padding-bottom: 10px;
 }
 
 footer {
-  padding: 5px;
+  padding: 10px;
   justify-content: center;
   font-size: medium;
   text-align: center;
@@ -29,10 +29,9 @@ footer {
 }
 
 header {
-  font-family: "Bebas Neue", cursive;
+  font-family: "Bebas Neue";
   font-size: 60px;
-  line-height: 50px;
-  padding-top: 40px;
+  margin-bottom: -50px;
 }
 
 a {
