--- a/src/components/Conditions/Conditions.module.css
+++ b/src/components/Conditions/Conditions.module.css
@@ -5,10 +5,9 @@
 }
 
 .Small {
-    color: red;
+    color: #ff6250;
 }
-/* this code was pulled from
-https://www.w3schools.com/howto/howto_css_loader.asp */
+
 .Loader {
     border: 16px solid #f3f3f3;
     border-top: 16px solid rgb(90, 89, 89);
